add delete button.

--- a/Views/add_car.cshtml
+++ b/Views/add_car.cshtml
@@ -17,6 +17,6 @@
       <input id="miles" name="miles" type="text">
       <button type="submit">Submit</button>
     </form>
-    <a href="/">Show All Cars</a>
+    <a href="/">Submit</a>
   </body>
 </html>
